--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -11,7 +11,7 @@ project-date: April 2014
 client: Start Bootstrap
 category: Chapter
 description: APIs have been there for years. Over the past couple of years, APIs have become a hype and ….
- <br/>Book name is “Build for Developers” for a reason. Choosing good name for the book was probably the toughest part. The name contains the idea of developers as primary customers in API Economy. I was also considering “Made by developers for developers”, because API economy contains developer love story since developers in companies are building APIs for other developers. On top top of that developers in companies are building tools around the APIs for other developers to consume and develop further. <br/>I've been lucky to have a long-term positive relationship with developers and hacker communities. I've always been comfortable with devs although own programming skills have rusted over the years. I have fallen in love with developer and hacker culture. Sharing and tutoring each other which is built-in to the developer communities have given me the opportunity to learn a lot more practical skills than my formal education. I feel constant yearning to pay it back by helping others and contribute the way I can, which is more or less research-driven information about various subjects.<br/>APIs have been my passion for the past 5 years, but my passion to work closely with application developers and developers, in general, go further back in my life. For example, I have spent years with hackerspace people while doing my Ph.D. research 2009-2015. Actually, as part of the research, I established hackerspace in Tampere, Finland 2009. Nowadays it has more than 300 members. That was my second living room for years.<br/> Another phase in my life which also took me close to developer lifestyle was falling in love with Linux around 2001. I found soulmates in Finnish Ubuntu community and later with MeeGo community. In the latter, I was the community manager for the Finnish MeeGo developer network.
+ <br/><br/>Book name is “Build for Developers” for a reason. Choosing good name for the book was probably the toughest part. The name contains the idea of developers as primary customers in API Economy. I was also considering “Made by developers for developers”, because API economy contains developer love story since developers in companies are building APIs for other developers. On top top of that developers in companies are building tools around the APIs for other developers to consume and develop further. <br/><br/>I've been lucky to have a long-term positive relationship with developers and hacker communities. I've always been comfortable with devs although own programming skills have rusted over the years. I have fallen in love with developer and hacker culture. Sharing and tutoring each other which is built-in to the developer communities have given me the opportunity to learn a lot more practical skills than my formal education. I feel constant yearning to pay it back by helping others and contribute the way I can, which is more or less research-driven information about various subjects.<br/><br/>APIs have been my passion for the past 5 years, but my passion to work closely with application developers and developers, in general, go further back in my life. For example, I have spent years with hackerspace people while doing my Ph.D. research 2009-2015. Actually, as part of the research, I established hackerspace in Tampere, Finland 2009. Nowadays it has more than 300 members. That was my second living room for years.<br/><br/> Another phase in my life which also took me close to developer lifestyle was falling in love with Linux around 2001. I found soulmates in Finnish Ubuntu community and later with MeeGo community. In the latter, I was the community manager for the Finnish MeeGo developer network.
 
 
 
