--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -11,7 +11,9 @@ project-date: April 2014
 client: Start Bootstrap
 category: Chapter
 ---
-	<p>APIs have been there for years. Over the past couple of years, APIs have become a hype and ….</p>
- 	<p>Book name is “Build for Developers” for a reason. Choosing good name for the book was probably the toughest part. The name contains the idea of developers as primary customers in API Economy. I was also considering “Made by developers for developers”, because API economy contains developer love story since developers in companies are building APIs for other developers. On top top of that developers in companies are building tools around the APIs for other developers to consume and develop further. </p>
+
+APIs have been there for years. Over the past couple of years, APIs have become a hype and ….
+ 
+Book name is “Build for Developers” for a reason. Choosing good name for the book was probably the toughest part. The name contains the idea of developers as primary customers in API Economy. I was also considering “Made by developers for developers”, because API economy contains developer love story since developers in companies are building APIs for other developers. On top top of that developers in companies are building tools around the APIs for other developers to consume and develop further. 
 
 
