--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,6 +1,6 @@
 ---
-title: Golden
-subtitle: Website Design
+title: Developer-first approach in product development
+subtitle: Focus on primaary customer
 layout: default
 modal-id: 3
 date: 2014-07-16
