--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,6 +1,6 @@
 ---
-title: Escape
-subtitle: Website Design
+title: APIs as products
+subtitle: About products in API Economy
 layout: default
 modal-id: 2
 date: 2014-07-17
