--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -1,6 +1,6 @@
 ---
 title: Beyond data APIs
-subtitle: APIs as products
+subtitle: Part I: APIs as products
 layout: default
 modal-id: 3
 date: 2014-07-16
