--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -1,6 +1,6 @@
 ---
 title: Key to succes is multidisciplinary team
-subtitle: Part I: APIs as products
+subtitle: Part I\: APIs as products
 layout: default
 modal-id: 5
 date: 2014-07-14
