--- a/_posts/2014-07-18-project-08.markdown
+++ b/_posts/2014-07-18-project-08.markdown
@@ -1,6 +1,6 @@
 ---
 title: Developer eXperience 
-subtitle: "Part II: Developer-first approach in product development"
+subtitle: "Part II: Developer-first approach"
 layout: default
 modal-id: 6
 date: 2014-07-15
