mod modal content

--- a/_posts/2014-07-18-project-01.markdown
+++ b/_posts/2014-07-18-project-01.markdown
@@ -9,7 +9,7 @@ thumbnail: dreams-thumbnail.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
-category: Chapter
+category: Part I - APIs as Products
 ---
 
 APIs have been there for years. Over the past couple of years, APIs have become a hype and ….
