--- a/_posts/2014-07-18-project-04.markdown
+++ b/_posts/2014-07-18-project-04.markdown
@@ -4,8 +4,8 @@ subtitle: Follow #Build4Devs
 layout: default
 modal-id: 3
 date: 2014-07-16
-img: golden.png
-thumbnail: golden-thumbnail.png
+img: more.png
+thumbnail: more.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
