--- a/_posts/2014-07-18-project-04.markdown
+++ b/_posts/2014-07-18-project-04.markdown
@@ -1,6 +1,6 @@
 ---
 title: More coming soon!
-subtitle: Follow #Build4Devs
+subtitle: Follow \#Build4Devs 
 layout: default
 modal-id: 3
 date: 2014-07-15
