--- a/_posts/2014-07-18-project-04.markdown
+++ b/_posts/2014-07-18-project-04.markdown
@@ -5,7 +5,7 @@ layout: default
 modal-id: 4
 date: 2014-07-17
 img: golden.png
-thumbnail: golden-thumbnail.png
+thumbnail: primary-customer.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
